web: fix build and buildoutput pages for dark mode

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -514,3 +514,11 @@ details.foldable[open] summary::before {
 .zuul-table-dark .list-group-item {
   background-color: #333 !important;
 }
+
+.zuul-build-output {
+}
+
+.zuul-build-output-dark {
+  background-color: #000 !important;
+  color: #fff;
+}
